# hypatia

./: .gitignore  Cargo.toml  Cross.toml  README.md  locomo_results_bge_m3.jsonl  locomo_results_glm-embedding-3-1024.jsonl  locomo_results_gte.jsonl  locomo_results_qwen2.jsonl  locomo_results_qwen3-embedding-8b-4096.jsonl  locomo_results_qwen3-embedding-8b.jsonl  shelf.toml.benchmark-remote
.cargo/: config.toml
docs/: benchmark-report.md  design.md
scripts/: build.sh
skills/hypatia/: SKILL.md
skills/hypatia-query/: SKILL.md
src/: error.rs  lab.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs  repl.rs
src/embedding/: config.rs  embedder.rs  mod.rs  provider.rs
src/engine/: ast.rs  evaluator.rs  mod.rs  operators.rs  parser.rs  sql_builder.rs
src/model/: content.rs  knowledge.rs  mod.rs  query.rs  shelf.rs  statement.rs
src/service/: knowledge.rs  mod.rs  search.rs  statement.rs
src/storage/: duckdb_store.rs  mod.rs  shelf_manager.rs  sqlite_store.rs
tests/: bench.rs  bench_data.rs  locomo.rs
