[package]
name = "hypatia"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
duckdb = { version = "1", features = ["bundled"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rustyline = "18"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = "0.21"
ndarray = "0.17"
toml = "0.8"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
rand = "0.9"
